Fixed some misaligned scss. Removed new romper-inactive styles as they were unneeded.

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -337,39 +337,37 @@ $romper-background-color: #ccc;
   }
 }
 
+.romper-player > .romper-gui {
 
-.romper-player > .romper-gui > .romper-buttons {
+  >.romper-buttons {
 
-  background-color: $backing-colour;
-  display: flex;
-  height: 100%;
-  max-height: 60px;
-  opacity: 0;
-  position: absolute;
-  transition: all 1s ease;
-  width: 100%;
-
-  >.romper-media-transport {
+    background-color: $backing-colour;
+    display: flex;
+    height: 100%;
+    max-height: 60px;
+    opacity: 0;
+    position: absolute;
+    transition: all 1s ease;
     width: 100%;
+
+    >.romper-media-transport {
+      width: 100%;
+    }
+
+    &.show {
+      background-color: $backing-colour;
+      display: flex;
+      height: 100%;
+      max-height: 60px;
+      opacity: 1;
+      width: 100%;
+    }
+
   }
 
   >.romper-narrative-element-transport {
     width: 100%;
   }
-
-  &.show {
-    background-color: $backing-colour;
-    display: flex;
-    height: 100%;
-    max-height: 60px;
-    opacity: 1;
-    width: 100%;
-  }
-
-}
-
-.romper-player > .romper-gui {
-
 
   >.romper-overlays {
     align-items: center;
@@ -393,7 +391,6 @@ $romper-background-color: #ccc;
       display: hidden;
       height: 0%;
       width: 0%;
-
     }
   }
 }
